// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transaction Fee Box should show Transaction Advanced Fee Box screen 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-align-items-xs-center-9 MuiGrid-justify-xs-space-between-20 TransactionFeeBoxComponent-container-0-1-1"
>
  <div
    className="MuiGrid-container-1 MuiGrid-wrap-xs-nowrap-7"
  >
    <div
      className="MuiGrid-container-1"
    >
      <div
        className="MuiGrid-item-2"
      >
        <span
          className="TransactionFeeBoxComponent-networkTransactionFeeTitle-0-1-2"
        >
           Network Transaction Fee: 
        </span>
      </div>
      <div
        className="MuiGrid-item-2"
      >
        <div
          className="MuiGrid-container-1 MuiGrid-spacing-xs-8-23 Component-root-0-1-20"
        >
          <div
            className="MuiGrid-item-2"
          >
            <div
              className="MuiGrid-container-1 MuiGrid-spacing-xs-8-23"
            >
              <div
                className="MuiGrid-item-2"
              >
                <div>
                  0.000000000000151
                   
                </div>
              </div>
              <div
                className="MuiGrid-item-2"
              >
                ETH
              </div>
              <div
                className="MuiGrid-item-2"
              >
                /
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-2"
          >
            <div
              className="MuiGrid-container-1 MuiGrid-spacing-xs-8-23"
            >
              <div
                className="MuiGrid-item-2"
              >
                <div>
                  $0.000000000037191
                   
                </div>
              </div>
              <div
                className="MuiGrid-item-2"
              >
                USD
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-2 TransactionFeeBoxComponent-showAdvancedContainer-0-1-3"
      onClick={[Function]}
    >
      <span>
         Advanced 
      </span>
      <i
        className="TransactionFeeBoxComponent-icon-0-1-4  TransactionFeeBoxComponent-downIcon-0-1-6"
      >
         
      </i>
    </div>
  </div>
  <div
    className="TransactionFeeBoxComponent-fullWidth-0-1-9"
  >
    <div
      className="MuiGrid-container-1 MuiGrid-align-items-xs-flex-start-10 MuiGrid-justify-xs-space-between-20 TransactionFeeBoxComponent-inputsContainer-0-1-7"
    >
      <div
        className="TransactionFeeBoxComponent-formGroup-0-1-8"
      >
        <label>
          Gas Price (Gwei)
        </label>
        <input
          className="TransactionFeeBoxComponent-formControl-0-1-15"
          onChange={[Function]}
          type="text"
          value={0}
        />
      </div>
      <div>
        <div
          className="TransactionFeeBoxComponent-formGroup-0-1-8"
        >
          <label>
            Gas Limit
          </label>
          <input
            className="TransactionFeeBoxComponent-formControl-0-1-15"
            onChange={[Function]}
            type="text"
            value={2100}
          />
        </div>
      </div>
      <div
        className="TransactionFeeBoxComponent-formGroup-0-1-8"
      >
        <label>
          Nonce
        </label>
        <span
          className="TransactionFeeBoxComponent-nonceValue-0-1-14"
        >
           
          1
           
        </span>
      </div>
    </div>
    <div
      className="MuiGrid-container-1 MuiGrid-direction-xs-column-4 MuiGrid-align-items-xs-center-9 MuiGrid-justify-xs-center-18"
    >
      <div
        className="TransactionFeeBoxComponent-currNetworkStatusContainer-0-1-16"
      >
        <span
          className="TransactionFeeBoxComponent-currNetworkStatusTitle-0-1-17"
        >
          Current Network Status: 
        </span>
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-98 TransactionFeeBoxComponent-reloadNetworkIcon-0-1-18"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
      <div
        className="TransactionFeeBoxComponent-gasPriceValuesContainer-0-1-19"
      >
        <p>
           Under 30 Mins: 
          1.5
           Gwei 
        </p>
        <p>
           Under 5 Mins: 
          18
           Gwei 
        </p>
        <p>
           Under 2 Mins: 
          50
           Gwei 
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Transaction Fee Box should show Transaction Fee Box screen 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-align-items-xs-center-9 MuiGrid-justify-xs-space-between-20 TransactionFeeBoxComponent-container-0-1-1"
>
  <div
    className="MuiGrid-container-1 MuiGrid-wrap-xs-nowrap-7"
  >
    <div
      className="MuiGrid-container-1"
    >
      <div
        className="MuiGrid-item-2"
      >
        <span
          className="TransactionFeeBoxComponent-networkTransactionFeeTitle-0-1-2"
        >
           Network Transaction Fee: 
        </span>
      </div>
      <div
        className="MuiGrid-item-2"
      >
        <div
          className="MuiGrid-container-1 MuiGrid-spacing-xs-8-23 Component-root-0-1-20"
        >
          <div
            className="MuiGrid-item-2"
          >
            <div
              className="MuiGrid-container-1 MuiGrid-spacing-xs-8-23"
            >
              <div
                className="MuiGrid-item-2"
              >
                <div>
                  0.000000000000151
                   
                </div>
              </div>
              <div
                className="MuiGrid-item-2"
              >
                ETH
              </div>
              <div
                className="MuiGrid-item-2"
              >
                /
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-2"
          >
            <div
              className="MuiGrid-container-1 MuiGrid-spacing-xs-8-23"
            >
              <div
                className="MuiGrid-item-2"
              >
                <div>
                  $0.000000000037191
                   
                </div>
              </div>
              <div
                className="MuiGrid-item-2"
              >
                USD
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-2 TransactionFeeBoxComponent-showAdvancedContainer-0-1-3"
      onClick={[Function]}
    >
      <span>
         Advanced 
      </span>
      <i
        className="TransactionFeeBoxComponent-icon-0-1-4  TransactionFeeBoxComponent-rightIcon-0-1-5"
      >
         
      </i>
    </div>
  </div>
</div>
`;
